launchpad-buildd (131) UNRELEASED; urgency=medium

  * slave-prep: Output current sbuild version, now that it's a separate
    package.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 30 Jun 2015 13:09:34 +0100

launchpad-buildd (130) trusty; urgency=medium

  * Reimplement build-dependency installation for recipes by hand using
    sbuild-like logic, allowing us to drop use of pbuilder (LP: #728494) and
    support :native in recipe build-dependencies (LP: #1322294).
  * Stop cleaning /home/buildd/public_html/ddebs/ and
    /home/buildd/public_html/translations/, now that we're using an sbuild
    that doesn't publish anything there.
  * Drop apache2 dependency, which was only needed for old-style
    ddeb/translation publishing.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 29 Jun 2015 17:56:52 +0100

launchpad-buildd (129) trusty; urgency=low

  [ William Grant ]
  * Tighten apt depwait parsing to not return uninstallable deps as missing.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 04 Jun 2015 11:42:13 +0100

launchpad-buildd (128) trusty; urgency=medium

  [ Colin Watson ]
  * Use sbuild's --resolve-alternatives mode, to match the behaviour of the
    old internal sbuild fork.

 -- William Grant <wgrant@ubuntu.com>  Tue, 26 May 2015 11:27:26 +1000

launchpad-buildd (127) trusty; urgency=low

  [ William Grant ]
  * Switch from an internal sbuild fork to the system package.
    - Dropped copy of sbuild.
    - Install ~buildd/.sbuildrc instead of ~buildd/.lp-sbuildrc.
    - Clean and update sbuildrc.
    - Write out /CurrentlyBuilding from Python.
    - Rewrite failure stage and depwait detection to cope with modern sbuild.
  * Refactor lpbuildd.binarypackage tests to be readable.
  * Drop duplicated paths from the config file.

  [ Colin Watson ]
  * Apply more reasonable log handling, as well as logrotate.
    RotatableFileLogObserver class borrowed from Launchpad, amended to use
    SIGHUP as its reopening signal.
